# newlicycle

./: README.md
bikebot/: CMakeLists.txt  package.xml
bikebot/include/: bicycle_controller.h  bikebot_control.h  leg_controller.h  licycle_config.h  motor_drive.h  opmath.h
bikebot/node/: Bike_MPC_Constant_V.py  bikebot_control.cpp  optimize.py
bikebot/script/: athread.py  can_test1.py  new_test.py  rx_can.py  tx_can.py
bikebot/src/: bicycle_controller.cpp  leg_controller.cpp  uart_test.cpp
licycle/: CMakeLists.txt
licycle/include/: bicycle_controller.h  bikebot_control.h  gait_generator.h  leg_controller.h  swing_leg_controller.h
licycle/node/: bikebot_control.cpp
licycle/src/: bicycle_controller.cpp  gait_generator.cpp  leg_controller.cpp  stance_leg_controller.cpp  swing_leg_controller.cpp
